website/versioned_docs/version-0.15.x/api/graphback/modules/_index_.md
---
id: "_index_"
title: "index"
sidebar_label: "index"
---

## Index

### References

* [BooleanInput](_index_.md#booleaninput)
* [CRUDService](_index_.md#crudservice)
* [CRUDServiceConfig](_index_.md#crudserviceconfig)
* [CreateCRUDServiceOptions](_index_.md#createcrudserviceoptions)
* [DataProviderCreator](_index_.md#dataprovidercreator)
* [DatabaseNameTransform](_index_.md#databasenametransform)
* [DatabaseNameTransformDirection](_index_.md#databasenametransformdirection)
* [DateTimeInput](_index_.md#datetimeinput)
* [DefaultValueAnnotation](_index_.md#defaultvalueannotation)
* [FieldRelationshipMetadata](_index_.md#fieldrelationshipmetadata)
* [FieldTransform](_index_.md#fieldtransform)
* [FieldTransformMap](_index_.md#fieldtransformmap)
* [FieldTransformer](_index_.md#fieldtransformer)
* [FloatInput](_index_.md#floatinput)
* [GraphBackPluginEngineOptions](_index_.md#graphbackpluginengineoptions)
* [GraphbackAPI](_index_.md#graphbackapi)
* [GraphbackAPIConfig](_index_.md#graphbackapiconfig)
* [GraphbackCRUDGeneratorConfig](_index_.md#graphbackcrudgeneratorconfig)
* [GraphbackCRUDService](_index_.md#graphbackcrudservice)
* [GraphbackConfig](_index_.md#graphbackconfig)
* [GraphbackContext](_index_.md#graphbackcontext)
* [GraphbackCoreMetadata](_index_.md#graphbackcoremetadata)
* [GraphbackDataProvider](_index_.md#graphbackdataprovider)
* [GraphbackDate](_index_.md#graphbackdate)
* [GraphbackDateTime](_index_.md#graphbackdatetime)
* [GraphbackGenerator](_index_.md#graphbackgenerator)
* [GraphbackGlobalConfig](_index_.md#graphbackglobalconfig)
* [GraphbackJSON](_index_.md#graphbackjson)
* [GraphbackJSONObject](_index_.md#graphbackjsonobject)
* [GraphbackObjectID](_index_.md#graphbackobjectid)
* [GraphbackOperationType](_index_.md#graphbackoperationtype)
* [GraphbackOrderBy](_index_.md#graphbackorderby)
* [GraphbackPage](_index_.md#graphbackpage)
* [GraphbackPlugin](_index_.md#graphbackplugin)
* [GraphbackPluginEngine](_index_.md#graphbackpluginengine)
* [GraphbackProxyService](_index_.md#graphbackproxyservice)
* [GraphbackResolverOptions](_index_.md#graphbackresolveroptions)
* [GraphbackServiceConfigMap](_index_.md#graphbackserviceconfigmap)
* [GraphbackTime](_index_.md#graphbacktime)
* [GraphbackTimestamp](_index_.md#graphbacktimestamp)
* [IdInput](_index_.md#idinput)
* [IntInput](_index_.md#intinput)
* [Maybe](_index_.md#maybe)
* [ModelDefinition](_index_.md#modeldefinition)
* [ModelTableMap](_index_.md#modeltablemap)
* [NoDataError](_index_.md#nodataerror)
* [QueryFilter](_index_.md#queryfilter)
* [RelationshipAnnotation](_index_.md#relationshipannotation)
* [RelationshipMetadataBuilder](_index_.md#relationshipmetadatabuilder)
* [ResultList](_index_.md#resultlist)
* [Scalars](_index_.md#scalars)
* [ServiceCreator](_index_.md#servicecreator)
* [SortDirection](_index_.md#sortdirection)
* [StringInput](_index_.md#stringinput)
* [TableDataMap](_index_.md#tabledatamap)
* [TableID](_index_.md#tableid)
* [TransformType](_index_.md#transformtype)
* [buildGeneratedRelationshipsFieldObject](_index_.md#buildgeneratedrelationshipsfieldobject)
* [buildGraphbackAPI](_index_.md#buildgraphbackapi)
* [buildModelTableMap](_index_.md#buildmodeltablemap)
* [buildModifiedRelationshipsFieldObject](_index_.md#buildmodifiedrelationshipsfieldobject)
* [buildRelationshipFilterFieldMap](_index_.md#buildrelationshipfilterfieldmap)
* [createCRUDService](_index_.md#createcrudservice)
* [defaultTableNameTransform](_index_.md#defaulttablenametransform)
* [filterModelTypes](_index_.md#filtermodeltypes)
* [filterNonModelTypes](_index_.md#filternonmodeltypes)
* [getColumnName](_index_.md#getcolumnname)
* [getDatabaseArguments](_index_.md#getdatabasearguments)
* [getFieldName](_index_.md#getfieldname)
* [getFieldTransformations](_index_.md#getfieldtransformations)
* [getInputFieldName](_index_.md#getinputfieldname)
* [getInputFieldTypeName](_index_.md#getinputfieldtypename)
* [getInputTypeName](_index_.md#getinputtypename)
* [getModelByName](_index_.md#getmodelbyname)
* [getModelTypesFromSchema](_index_.md#getmodeltypesfromschema)
* [getPrimaryKey](_index_.md#getprimarykey)
* [getRelationFieldName](_index_.md#getrelationfieldname)
* [getRelationshipAnnotationString](_index_.md#getrelationshipannotationstring)
* [getSelectedFieldsFromResolverInfo](_index_.md#getselectedfieldsfromresolverinfo)
* [getSubscriptionName](_index_.md#getsubscriptionname)
* [getTableName](_index_.md#gettablename)
* [getUserModels](_index_.md#getusermodels)
* [graphbackScalarsTypes](_index_.md#graphbackscalarstypes)
* [isInputField](_index_.md#isinputfield)
* [isModelType](_index_.md#ismodeltype)
* [isOneToManyField](_index_.md#isonetomanyfield)
* [isSpecifiedGraphbackJSONScalarType](_index_.md#isspecifiedgraphbackjsonscalartype)
* [isSpecifiedGraphbackScalarType](_index_.md#isspecifiedgraphbackscalartype)
* [lowerCaseFirstChar](_index_.md#lowercasefirstchar)
* [mergeDescriptionWithRelationshipAnnotation](_index_.md#mergedescriptionwithrelationshipannotation)
* [metadataMap](_index_.md#metadatamap)
* [parseRelationshipAnnotation](_index_.md#parserelationshipannotation)
* [printSchemaWithDirectives](_index_.md#printschemawithdirectives)
* [relationshipFieldDescriptionTemplate](_index_.md#relationshipfielddescriptiontemplate)
* [relationshipOneToOneFieldDescriptionTemplate](_index_.md#relationshiponetoonefielddescriptiontemplate)
* [stripRelationshipAnnotation](_index_.md#striprelationshipannotation)
* [transformForeignKeyName](_index_.md#transformforeignkeyname)
* [upperCaseFirstChar](_index_.md#uppercasefirstchar)
* [withSubscriptionFilter](_index_.md#withsubscriptionfilter)

## References

###  BooleanInput

• **BooleanInput**:

___

###  CRUDService

• **CRUDService**:

___

###  CRUDServiceConfig

• **CRUDServiceConfig**:

___

###  CreateCRUDServiceOptions

• **CreateCRUDServiceOptions**:

___

###  DataProviderCreator

• **DataProviderCreator**:

___

###  DatabaseNameTransform

• **DatabaseNameTransform**:

___

###  DatabaseNameTransformDirection

• **DatabaseNameTransformDirection**:

___

###  DateTimeInput

• **DateTimeInput**:

___

###  DefaultValueAnnotation

• **DefaultValueAnnotation**:

___

###  FieldRelationshipMetadata

• **FieldRelationshipMetadata**:

___

###  FieldTransform

• **FieldTransform**:

___

###  FieldTransformMap

• **FieldTransformMap**:

___

###  FieldTransformer

• **FieldTransformer**:

___

###  FloatInput

• **FloatInput**:

___

###  GraphBackPluginEngineOptions

• **GraphBackPluginEngineOptions**:

___

###  GraphbackAPI

• **GraphbackAPI**:

___

###  GraphbackAPIConfig

• **GraphbackAPIConfig**:

___

###  GraphbackCRUDGeneratorConfig

• **GraphbackCRUDGeneratorConfig**:

___

###  GraphbackCRUDService

• **GraphbackCRUDService**:

___

###  GraphbackConfig

• **GraphbackConfig**:

___

###  GraphbackContext

• **GraphbackContext**:

___

###  GraphbackCoreMetadata

• **GraphbackCoreMetadata**:

___

###  GraphbackDataProvider

• **GraphbackDataProvider**:

___

###  GraphbackDate

• **GraphbackDate**:

___

###  GraphbackDateTime

• **GraphbackDateTime**:

___

###  GraphbackGenerator

• **GraphbackGenerator**:

___

###  GraphbackGlobalConfig

• **GraphbackGlobalConfig**:

___

###  GraphbackJSON

• **GraphbackJSON**:

___

###  GraphbackJSONObject

• **GraphbackJSONObject**:

___

###  GraphbackObjectID

• **GraphbackObjectID**:

___

###  GraphbackOperationType

• **GraphbackOperationType**:

___

###  GraphbackOrderBy

• **GraphbackOrderBy**:

___

###  GraphbackPage

• **GraphbackPage**:

___

###  GraphbackPlugin

• **GraphbackPlugin**:

___

###  GraphbackPluginEngine

• **GraphbackPluginEngine**:

___

###  GraphbackProxyService

• **GraphbackProxyService**:

___

###  GraphbackResolverOptions

• **GraphbackResolverOptions**:

___

###  GraphbackServiceConfigMap

• **GraphbackServiceConfigMap**:

___

###  GraphbackTime

• **GraphbackTime**:

___

###  GraphbackTimestamp

• **GraphbackTimestamp**:

___

###  IdInput

• **IdInput**:

___

###  IntInput

• **IntInput**:

___

###  Maybe

• **Maybe**:

___

###  ModelDefinition

• **ModelDefinition**:

___

###  ModelTableMap

• **ModelTableMap**:

___

###  NoDataError

• **NoDataError**:

___

###  QueryFilter

• **QueryFilter**:

___

###  RelationshipAnnotation

• **RelationshipAnnotation**:

___

###  RelationshipMetadataBuilder

• **RelationshipMetadataBuilder**:

___

###  ResultList

• **ResultList**:

___

###  Scalars

• **Scalars**:

___

###  ServiceCreator

• **ServiceCreator**:

___

###  SortDirection

• **SortDirection**:

___

###  StringInput

• **StringInput**:

___

###  TableDataMap

• **TableDataMap**:

___

###  TableID

• **TableID**:

___

###  TransformType

• **TransformType**:

___

###  buildGeneratedRelationshipsFieldObject

• **buildGeneratedRelationshipsFieldObject**:

___

###  buildGraphbackAPI

• **buildGraphbackAPI**:

___

###  buildModelTableMap

• **buildModelTableMap**:

___

###  buildModifiedRelationshipsFieldObject

• **buildModifiedRelationshipsFieldObject**:

___

###  buildRelationshipFilterFieldMap

• **buildRelationshipFilterFieldMap**:

___

###  createCRUDService

• **createCRUDService**:

___

###  defaultTableNameTransform

• **defaultTableNameTransform**:

___

###  filterModelTypes

• **filterModelTypes**:

___

###  filterNonModelTypes

• **filterNonModelTypes**:

___

###  getColumnName

• **getColumnName**:

___

###  getDatabaseArguments

• **getDatabaseArguments**:

___

###  getFieldName

• **getFieldName**:

___

###  getFieldTransformations

• **getFieldTransformations**:

___

###  getInputFieldName

• **getInputFieldName**:

___

###  getInputFieldTypeName

• **getInputFieldTypeName**:

___

###  getInputTypeName

• **getInputTypeName**:

___

###  getModelByName

• **getModelByName**:

___

###  getModelTypesFromSchema

• **getModelTypesFromSchema**:

___

###  getPrimaryKey

• **getPrimaryKey**:

___

###  getRelationFieldName

• **getRelationFieldName**:

___

###  getRelationshipAnnotationString

• **getRelationshipAnnotationString**:

___

###  getSelectedFieldsFromResolverInfo

• **getSelectedFieldsFromResolverInfo**:

___

###  getSubscriptionName

• **getSubscriptionName**:

___

###  getTableName

• **getTableName**:

___

###  getUserModels

• **getUserModels**:

___

###  graphbackScalarsTypes

• **graphbackScalarsTypes**:

___

###  isInputField

• **isInputField**:

___

###  isModelType

• **isModelType**:

___

###  isOneToManyField

• **isOneToManyField**:

___

###  isSpecifiedGraphbackJSONScalarType

• **isSpecifiedGraphbackJSONScalarType**:

___

###  isSpecifiedGraphbackScalarType

• **isSpecifiedGraphbackScalarType**:

___

###  lowerCaseFirstChar

• **lowerCaseFirstChar**:

___

###  mergeDescriptionWithRelationshipAnnotation

• **mergeDescriptionWithRelationshipAnnotation**:

___

###  metadataMap

• **metadataMap**:

___

###  parseRelationshipAnnotation

• **parseRelationshipAnnotation**:

___

###  printSchemaWithDirectives

• **printSchemaWithDirectives**:

___

###  relationshipFieldDescriptionTemplate

• **relationshipFieldDescriptionTemplate**:

___

###  relationshipOneToOneFieldDescriptionTemplate

• **relationshipOneToOneFieldDescriptionTemplate**:

___

###  stripRelationshipAnnotation

• **stripRelationshipAnnotation**:

___

###  transformForeignKeyName

• **transformForeignKeyName**:

___

###  upperCaseFirstChar

• **upperCaseFirstChar**:

___

###  withSubscriptionFilter

• **withSubscriptionFilter**:
